# seedlink-rs

./: .gitignore  CLAUDE.md  Cargo.toml  PROMPT.md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FEATURES.md
pyscripts/: pyproject.toml
pyscripts/src/pyscripts/: generate_vectors.py
scripts/: bump-version.sh
seedlink-client/: Cargo.toml
seedlink-client/src/: client.rs  connection.rs  error.rs  lib.rs  mock.rs  negotiate.rs  reconnect.rs  state.rs  stream.rs
seedlink-client/tests/: integration.rs  test_vectors.rs
seedlink-protocol/: Cargo.toml
seedlink-protocol/src/: command.rs  error.rs  info.rs  lib.rs  response.rs  sequence.rs  version.rs
seedlink-protocol/src/frame/: mod.rs  v3.rs  v4.rs
seedlink-protocol/tests/: test_vectors.rs
seedlink-server/: Cargo.toml
seedlink-server/examples/: stress_test.rs
seedlink-server/src/: connections.rs  error.rs  handler.rs  info.rs  lib.rs  select.rs  store.rs  time.rs
