[package]
name = "seedlink-rs-client"
version = "0.3.1"
description = "Async SeedLink client for real-time seismic data streaming"
readme = "../README.md"
keywords = ["seismic", "seedlink", "client", "streaming", "fdsn"]
categories = ["network-programming", "science"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
seedlink-rs-protocol.workspace = true
miniseed-rs.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-core.workspace = true
async-stream.workspace = true
tokio.workspace = true

[dev-dependencies]
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["test-util"] }
tokio-stream = "0.1"
