[package]
name = "seedlink-rs-protocol"
version = "0.2.0"
description = "SeedLink protocol types, commands, and frame parsing"
readme = "../README.md"
keywords = ["seismic", "seedlink", "protocol", "fdsn"]
categories = ["encoding", "parser-implementations", "science"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miniseed-rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
